# sem6-labs

graphics-lab1/: CMakeLists.txt
graphics-lab1/include/: image.hpp  light.hpp  polygon.hpp
graphics-lab1/src/: main.cpp  polygon.cpp
graphics-lab2/: CMakeLists.txt
graphics-lab2/include/: celestial.hpp  polygon.hpp
graphics-lab2/src/: celestial.cpp  image.cpp  light.cpp  main.cpp  polygon.cpp
graphics-lab3/: CMakeLists.txt
graphics-lab3/include/: camera.h  cube.h  defines.h  keyboard.h  texture.h  transform.h
graphics-lab3/resources/: light_gradient.raw
graphics-lab3/resources/shaders/: cube.frag  cube.vert
graphics-lab3/src/: camera.cpp  cube.cpp  keyboard.cpp  main.cpp  texture.cpp  transform.cpp
